# MC14500B

./: .gitignore  MC14500B.qpf  MC14500B.qsf  MC14500B.qws  MC14500B.sdc  MC14500B.sv  MC14500B_nativelink_simulation.rpt  MC14516B.sv  MC14599B.sv  MCM7641.sv  PS34706.sv  ProgramCounter.sv  RAM.sv  README.md  ROM.sv  SystemCounter.sv  adder.sv  data_ram.sv  icu.sv  instructions.sv  io_block.sv  out.txt  processor.sv  program.mem  program_counter.sv  program_memory.sv  programator.sv  ram.sv  reset_module.sv  rom.sv  sync_buffer.sv  tb_MC14500B.sv  tb_MC14516B.sv  tb_icu.sv  tb_processor.sv  tb_wrapper.sv  text.txt  text_ram.sv  uart_rx.sv  ultra_wrapper.sv  (+1 more)
blink/: blink.sv
masm/: CMakeLists.txt  assembler.cpp  assembler.h  logger.cpp  logger.h  masm.cpp
masm/examples/: example.txt
testbenches/: testbenches_setup(doesnt_work).txt
testbenches/MC14516B/: MC14516B.py  tb_cases_MC14516B.txt  testbench_MC14516B.sv
testbenches/MC14599B/: MC14599B.py  adaptedMC14599B.py  tb_cases_MC14599B.txt  testbench_MC14599B.sv
timing/stamp/: MC14500B_7_1100mv_-40c_board_slow.data  MC14500B_7_1100mv_-40c_board_slow.mod  MC14500B_7_1100mv_100c_board_slow.data  MC14500B_7_1100mv_100c_board_slow.mod  MC14500B_min_1100mv_-40c_board_fast.data  MC14500B_min_1100mv_-40c_board_fast.mod  MC14500B_min_1100mv_100c_board_fast.data  MC14500B_min_1100mv_100c_board_fast.mod
